--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/rent/rent"
+    "pages/rent/rent",
+    "pages/user/user"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -10,5 +11,5 @@
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
-  "debug":true
+  "debug": true
 }
