--- a/project.config.json
+++ b/project.config.json
@@ -9,19 +9,16 @@
 		"postcss": true,
 		"minified": true,
 		"newFeature": true,
-		"autoAudits": false,
-		"checkInvalidKey": true
+		"autoAudits": false
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.6.6",
-	"appid": "wxb7571409bd516d9d",
-	"projectname": "zudianlv",
+	"libVersion": "2.6.2",
+	"appid": "wxf24d02e7d8ad00ac",
+	"projectname": "evcompanion",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
 	"isGameTourist": false,
-	"simulatorType": "wechat",
-	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
