--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.2",
-	"appid": "wxf24d02e7d8ad00ac",
+	"appid": "wxb7571409bd516d9d",
 	"projectname": "evcompanion",
 	"debugOptions": {
 		"hidedInDevtools": []
